@@ -12,7 +12,9 @@
  *
  **/
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ddf</groupId>
@@ -142,11 +144,11 @@
     <properties>
 
         <!--  default URL properties -->
-        <ddf.scm.connection.url />
-        <snapshots.repository.url />
+        <ddf.scm.connection.url/>
+        <snapshots.repository.url/>
 
         <!-- Must MANUALLY update this if the ddf/support project's version changes -->
-        <ddf.support.version>2.3.1</ddf.support.version>
+        <ddf.support.version>2.3.2-SNAPSHOT</ddf.support.version>
 
         <!-- Must MANUALLY update this if the ddf/support-pmd project's version changes -->
         <ddf.support.pmd.version>3.0.2-SNAPSHOT</ddf.support.pmd.version>
@@ -157,6 +159,8 @@
         <!-- Properties for the frontend-maven-plugin -->
         <node.version>v0.10.30</node.version>
         <npm.version>1.4.12</npm.version>
+
+        <argLine>-XX:MaxPermSize=512m</argLine>
     </properties>
 
     <!--
@@ -259,12 +263,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.9.1</version>
+                    <version>2.15</version>
                     <dependencies>
                         <dependency>
                             <groupId>ddf.support</groupId>
                             <artifactId>support-checkstyle</artifactId>
-                            <version>2.3.1</version>
+                            <version>${ddf.support.version}</version>
                             <optional>true</optional>
                         </dependency>
                     </dependencies>
@@ -306,6 +310,17 @@
                             </configuration>
                         </execution>
                     </executions>
+                    <configuration>
+                        <!-- This configures the plugin for mvn checkstyle:checkstyle  -->
+                        <configLocation>checkstyle-enforced.xml</configLocation>
+                        <headerLocation>lpgl-header-check.txt</headerLocation>
+                        <sourceDirectory>${basedir}</sourceDirectory>
+                        <includes>src/**/*.java</includes>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <linkXRef>false</linkXRef>
+                        <aggregate>true</aggregate>
+                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -821,9 +836,9 @@
                                         </requires>
                                         <!-- WARNING callout bullets don't yet work with CodeRay -->
                                         <attributes>
-                                            <pagenums />
-                                            <toc />
-                                            <idprefix />
+                                            <pagenums/>
+                                            <toc/>
+                                            <idprefix/>
                                             <idseparator>-</idseparator>
                                         </attributes>
                                     </configuration>
